syntax = "proto3";
import "shared.proto";

service BookService {
  rpc find (BookId) returns (Book);
  rpc list (Shared.Void) returns (BookList);
  rpc create (BookCreate) returns (Book);
  rpc update (BookUpdateRequest) returns (Book);
  rpc remove (BookId) returns (Shared.Void);
}

message BookId {
  string id = 1;
}

message Book {
  string id = 1;
  string title = 2;
  string publisher = 3;
  repeated string authors = 4;
  string summary = 5;
  string isbn = 6;
  uint32 pages = 7;
}

message BookCreate {
  string title = 1;
  string publisher = 2;
  repeated string authors = 3;
  optional string summary = 4;
  string isbn = 5;
  uint32 pages = 6;
}

message BookUpdate {
  optional string title = 2;
  optional string publisher = 3;
  repeated string authors = 4;
  optional string summary = 5;
  optional string isbn = 6;
  optional uint32 pages = 7;
}

message BookUpdateRequest {
  string id = 1;
  BookUpdate bookUpdateParams = 2;
}

message BookList {
  repeated Book books = 1;
}


